--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,11 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Matthew Klein
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: matthewklein345@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://matthew-a-klein.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
